--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,90 @@
-.App {
-  text-align: center;
+/* App.css */
+
+body {
+  background-color: #f8f8f8;
+  font-family: Arial, sans-serif;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.container {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  height: 100vh;
+  text-align: center;
+  background: #00026e
 }
 
-.App-link {
-  color: #61dafb;
+.title {
+  font-size: 24px;
+  margin-bottom: 20px;
 }
 
-@keyframes App-logo-spin {
-  from {
+
+
+.search-container {
+  display: flex;
+  align-items: stretch;
+  justify-content: center;
+  margin-bottom: 20px;
+  width: 100%;
+  max-width: 400px;
+}
+
+.search-input {
+  flex: 6;
+  padding: 16px 24px;
+  border: none;
+  border-radius: 50px 0 0 50px;
+  font-size: 16px;
+}
+
+.search-button {
+  padding: 16px;
+  background-color: #00a6ff;
+  color: #fff;
+  border: none;
+  border-radius: 0 50px 50px 0;
+  font-size: 18px;
+  cursor: pointer;
+}
+
+.loader {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.circle {
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  border: 4px solid #f3f3f3;
+  border-top-color: #3498db;
+  animation: spin 1s linear infinite;
+}
+
+@keyframes spin {
+  0% {
     transform: rotate(0deg);
   }
-  to {
+  100% {
     transform: rotate(360deg);
   }
+}
+
+.title{
+  color: #fff;
+  font-weight: bold;
+  margin: 0px;
+  margin-bottom: 0.5em;
+
+}
+
+.sub-title{
+  margin: 0px;
+  color: #fff;
+  font-weight: normal;
+  margin-bottom: 2em;
 }
