--- a/src/App.css
+++ b/src/App.css
@@ -1,90 +1,8 @@
 /* App.css */
 
-body {
+/* body {
   background-color: #f8f8f8;
   font-family: Arial, sans-serif;
-}
+} */
 
 
-.container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  height: 100vh;
-  text-align: center;
-  background: #00026e
-}
-
-.title {
-  font-size: 24px;
-  margin-bottom: 20px;
-}
-
-
-
-.search-container {
-  display: flex;
-  align-items: stretch;
-  justify-content: center;
-  margin-bottom: 20px;
-  width: 100%;
-  max-width: 400px;
-}
-
-.search-input {
-  flex: 6;
-  padding: 16px 24px;
-  border: none;
-  border-radius: 50px 0 0 50px;
-  font-size: 16px;
-}
-
-.search-button {
-  padding: 16px;
-  background-color: #00a6ff;
-  color: #fff;
-  border: none;
-  border-radius: 0 50px 50px 0;
-  font-size: 18px;
-  cursor: pointer;
-}
-
-.loader {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.circle {
-  width: 20px;
-  height: 20px;
-  border-radius: 50%;
-  border: 4px solid #f3f3f3;
-  border-top-color: #3498db;
-  animation: spin 1s linear infinite;
-}
-
-@keyframes spin {
-  0% {
-    transform: rotate(0deg);
-  }
-  100% {
-    transform: rotate(360deg);
-  }
-}
-
-.title{
-  color: #fff;
-  font-weight: bold;
-  margin: 0px;
-  margin-bottom: 0.5em;
-
-}
-
-.sub-title{
-  margin: 0px;
-  color: #fff;
-  font-weight: normal;
-  margin-bottom: 2em;
-}
