--- a/src/index.css
+++ b/src/index.css
@@ -12,7 +12,6 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
-/* 
 
 .container {
   display: flex;
@@ -20,6 +19,8 @@ code {
   align-items: center;
   justify-content: center;
   height: 100vh;
+  text-align: center;
+  background: #00026e
 }
 
 .title {
@@ -27,28 +28,32 @@ code {
   margin-bottom: 20px;
 }
 
+
+
 .search-container {
   display: flex;
-  align-items: center;
+  align-items: stretch;
   justify-content: center;
   margin-bottom: 20px;
+  width: 100%;
+  max-width: 400px;
 }
 
 .search-input {
-  padding: 8px;
-  border: 1px solid #ccc;
-  border-radius: 4px;
-  margin-right: 8px;
+  flex: 6;
+  padding: 16px 24px;
+  border: none;
+  border-radius: 50px 0 0 50px;
   font-size: 16px;
 }
 
 .search-button {
-  padding: 8px 16px;
-  background-color: #3498db;
+  padding: 16px;
+  background-color: #00a6ff;
   color: #fff;
   border: none;
-  border-radius: 4px;
-  font-size: 16px;
+  border-radius: 0 50px 50px 0;
+  font-size: 18px;
   cursor: pointer;
 }
 
@@ -56,12 +61,11 @@ code {
   display: flex;
   align-items: center;
   justify-content: center;
-  height: 100px;
 }
 
 .circle {
-  width: 30px;
-  height: 30px;
+  width: 20px;
+  height: 20px;
   border-radius: 50%;
   border: 4px solid #f3f3f3;
   border-top-color: #3498db;
@@ -75,4 +79,33 @@ code {
   100% {
     transform: rotate(360deg);
   }
-} */
+}
+
+.title{
+  color: #fff;
+  font-weight: bold;
+  margin: 0px;
+  margin-bottom: 0.5em;
+
+}
+
+.sub-title{
+  margin: 0px;
+  color: #fff;
+  font-weight: normal;
+  margin-bottom: 2em;
+}
+
+/* The grid container */
+.grid-container {
+  display: flex;
+  margin: 0;
+  flex-wrap: wrap; /* Allows items to wrap to a new line when there's not enough space */
+  justify-content: space-between; /* Distributes items evenly, leaving space between them */
+}
+
+/* The grid items */
+.grid-item {
+  flex: 0 0 calc(33.33% - 15px); /* Each item takes up 33.33% of the container width with a small gap */
+  margin: 5px;
+}
