--- a/src/index.css
+++ b/src/index.css
@@ -23,11 +23,6 @@ code {
   background: #00026e
 }
 
-.title {
-  font-size: 24px;
-  margin-bottom: 20px;
-}
-
 
 
 .search-container {
@@ -86,7 +81,7 @@ code {
   font-weight: bold;
   margin: 0px;
   margin-bottom: 0.5em;
-
+  
 }
 
 .sub-title{
@@ -156,4 +151,41 @@ span{
   text-align: start;
   margin: 0px;
   line-height: 25px;
+}
+
+.modal-background{
+  background-color: rgba(200,200,200);
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 100;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.modal-container{
+  background-color: white;
+  border-radius: 10px;
+  padding: 10px;
+  box-shadow: rgba(0, 0, 0, 0.16) 0px 10px 36px 0px, rgba(0, 0, 0, 0.06) 0px 0px 0px 1px;
+   max-width: 50%;
+  max-height: 50%;
+  overflow: auto; 
+}
+
+.close-button{
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  background-color: white;
+  padding: 10px;
+  border: none;
+  cursor: pointer;
+}
+
+.author::first-letter {
+  text-transform:capitalize;
 }
