--- a/src/index.css
+++ b/src/index.css
@@ -186,6 +186,43 @@ span{
   cursor: pointer;
 }
 
-.author::first-letter {
-  text-transform:capitalize;
+.toast-container {
+  position: fixed;
+  top: 20px;
+  right: -300px; /* Start position outside the viewport */
+  width: 300px;
+  background-color: #f44336b4; /* Red background color */
+  color: #fff; /* White text color */
+  padding: 16px;
+  border-radius: 4px;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
+  animation: slide-in 0.3s forwards;
+}
+
+.toast-content {
+  display: flex;
+  align-items: center;
+}
+
+.toast-message {
+  flex-grow: 1;
+  color: #fff;
+}
+
+.toast-close {
+  border: none;
+  background: transparent;
+  cursor: pointer;
+  font-size: 18px;
+  color: #fff;
+  margin-left: 8px;
+}
+
+@keyframes slide-in {
+  from {
+    right: -300px;
+  }
+  to {
+    right: 20px; 
+  }
 }
