--- a/src/index.css
+++ b/src/index.css
@@ -171,8 +171,8 @@ span{
   border-radius: 10px;
   padding: 10px;
   box-shadow: rgba(0, 0, 0, 0.16) 0px 10px 36px 0px, rgba(0, 0, 0, 0.06) 0px 0px 0px 1px;
-   max-width: 50%;
-  max-height: 50%;
+   max-width: 65%;
+  max-height: 65%;
   overflow: auto; 
 }
 
@@ -225,4 +225,12 @@ span{
   to {
     right: 20px; 
   }
+}
+
+.modal-container a{
+  text-decoration: none;
+  color: white;
+  background-color: #00a6ff;
+  padding: 10px;
+  border-radius: 5px;
 }
